--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: ebcd
-Title: What the Package Does (One Line, Title Case)
+Title: Empirical Bayes Covariance Decomposition
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Joonsuk", "Kang", , "joonsukkang@uchicago.edu", role = c("aut", "cre"))
+Description: Implements scalable empirical Bayes methods for covariance decomposition. Currently in development.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
 Encoding: UTF-8
