--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Joonsuk", "Kang", , "joonsukkang@uchicago.edu", role = c("aut", "cre"))
 Description: Implements scalable empirical Bayes methods for covariance decomposition. Currently in development.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
