--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/joonsukkang/ebcd
 BugReports: https://github.com/joonsukkang/ebcd/issues
+Imports: 
+    ebnm,
+    irlba
