--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,5 @@ URL: https://github.com/joonsukkang/ebcd
 BugReports: https://github.com/joonsukkang/ebcd/issues
 Imports: 
     ebnm,
+    flashier,
     irlba
